--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>MY AWESOME WEBSITE</h1>
-    <p>Hi there</p>    
+    <p>HI THERE</p>    
     <p>Visitor Count {{count}}</p>
 </body>
 </html>
-
